Ignore tests that are failing in Java 17